--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,15 @@
 	<body>
 		<div class="container mt-5">
 			<h1 class="text-center mb-4">ANP Decision Making</h1>
+			<p class="text-center">
+				Data pada projek ini diambil dari kaggle berikut linknya
+			</p>
+			<a href="https://www.kaggle.com/datasets/shwetabh123/mall-customers"
+				>Kaggle</a
+			>
+			<p>Nama Kelompok:</p>
+			<p>1. Fazrul Akmal Fadila C0C022001</p>
+			<p>2. Syafrie Abdunnasir Jawad C0C022011</p>
 			<form
 				id="anp-form"
 				class="mb-4">
